Change words on the last day

--- a/data/config.json
+++ b/data/config.json
@@ -117,7 +117,7 @@
             "words":
             {
                 "2014/11/6": "Today is the only day for visiting Pittsburgh!",
-                "2014/11/7": "Are you coming to pick me up?"
+                "2014/11/7": "The real me is going back to you."
             }
         }
     }
